<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:padding="20dp"
                android:text="@string/log_in_to_your_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/enter_your_username"
                android:inputType="textEmailAddress"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/exception"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fields_can_t_be_empty"
                android:textColor="@color/red"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                android:textAlignment="viewEnd"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="15dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="5dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_margin="15dp"
        android:text="@string/welcome_to_programmer_movie_watchlist_app"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>